--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port = 8082
+
+#h2 properties
+#dbname - userDb
+spring.h2.console.enabled= true
+spring.datasource.url=jdbc:h2:mem:userDb 
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=vivek
+spring.datasource.password=vivek.1996
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
