--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,18 @@ server.port = 9002
 server.error.include-message = always
 
 #h2 properties
-#dbname - userDb
-spring.h2.console.enabled= true
-spring.datasource.url=jdbc:h2:mem:testdb 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#dbname - testdb
+#spring.h2.console.enabled= true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# my sql properties
+spring.jpa.hibernate.ddl-auto= update
+spring.datasource.url=jdbc:mysql://localhost:3306/world
+spring.datasource.driver-clas-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=vivek
+spring.jpa.show-sql=true
