using app properties to print welcome message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port = 9002
 server.error.include-message = always
 
+welcome.message=Welcome to Learning Mr. Vivek
+
 #h2 properties
 #dbname - testdb
 #spring.h2.console.enabled= true
