--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,25 +21,13 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
-welcome:
-    message: Welcome to Learning Mr. Vivek in Dev Env
+app:
+    name: SpringBootTutorial
+    welcome:
+        message: Welcome to ${app.name} Learning Mr. Vivek in ${spring.profiles.active} Env
 # adding all api endpoints in actuator
 management:
   endpoints:
     web:
       exposure:
         include: "*"
-
----
-spring:
-    datasource:
-        driver-clas-name: com.mysql.jdbc.Driver
-        password: vivek
-        url: jdbc:mysql://localhost:3306/world  # "world" is the schemaNAme
-        username: root
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-welcome:
-    message: Welcome to Learning Mr. Vivek in Prod Env
