--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ app:
     name: SpringBootTutorial
     welcome:
         message: Welcome to ${app.name} Learning Mr. Vivek in ${spring.profiles.active} Env
+    list.values: one,two,three
 # adding all api endpoints in actuator
 management:
   endpoints:
